# super_productivity_cli

./: README.md  setup.cfg
super_productivity_cli/: __init__.py  __main__.py  client.py
