[metadata]
name = super_productivity_cli
version = 1.0.0
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = An unofficial CLI for super-productivity.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = super-productivity cli

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = .

